[gd_scene load_steps=14 format=2]

[ext_resource path="res://Tile_Sets/ForestTileSet.tres" type="TileSet" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/orange kid.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Multiplayer.gd" type="Script" id=4]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/full_heart2.png" type="Texture" id=6]
[ext_resource path="res://backbanner.png" type="Texture" id=7]
[ext_resource path="res://Sprites/resume_button.png" type="Texture" id=8]
[ext_resource path="res://Sprites/exit_button.png" type="Texture" id=9]
[ext_resource path="res://Sprites/restart_button.png" type="Texture" id=10]
[ext_resource path="res://Sprites/2playerpausemenucontrol-export.png" type="Texture" id=11]
[ext_resource path="res://MultiplayerPause.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Multiplayer" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 159, -1792 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -262145, 4, 0, -327660, 4, 0, -196609, 4, 0, -262124, 4, 0, -131073, 4, 0, -196588, 4, 0, -65537, 4, 0, -131052, 4, 0, -1, 4, 0, -65516, 4, 0, 65535, 4, 0, 20, 4, 0, 131071, 4, 0, 65556, 4, 0, 196607, 4, 0, 131092, 4, 0, 262143, 4, 0, 196610, 17, 0, 196611, 18, 0, 196612, 18, 0, 196613, 18, 0, 196614, 18, 0, 196615, 18, 0, 196616, 18, 0, 196617, 18, 0, 196618, 18, 0, 196619, 18, 0, 196620, 18, 0, 196621, 18, 0, 196622, 18, 0, 196623, 18, 0, 196624, 18, 0, 196625, 19, 0, 196628, 4, 0, 327679, 4, 0, 262144, 19, 0, 262163, 17, 0, 262164, 4, 0, 393215, 4, 0, 327687, 17, 0, 327688, 19, 0, 327691, 17, 0, 327692, 19, 0, 327700, 4, 0, 458751, 4, 0, 393216, 18, 0, 393217, 18, 0, 393218, 18, 0, 393219, 19, 0, 393232, 17, 0, 393233, 18, 0, 393234, 18, 0, 393235, 18, 0, 393236, 4, 0, 524287, 4, 0, 458772, 4, 0, 589823, 4, 0, 524291, 17, 0, 524292, 18, 0, 524293, 18, 0, 524294, 19, 0, 524297, 17, 0, 524298, 19, 0, 524301, 17, 0, 524302, 18, 0, 524303, 18, 0, 524304, 19, 0, 524308, 4, 0, 655359, 4, 0, 589844, 4, 0, 720895, 4, 0, 655367, 17, 0, 655368, 19, 0, 655371, 17, 0, 655372, 19, 0, 655380, 4, 0, 786431, 4, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 4, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 16, 160 )

[node name="Player2" parent="." instance=ExtResource( 5 )]
position = Vector2( 298, 160 )

[node name="Score" type="Label" parent="."]
margin_right = 320.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "0 - 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart1" type="Sprite" parent="."]
position = Vector2( 312, 6 )
texture = ExtResource( 6 )

[node name="heart2" type="Sprite" parent="."]
position = Vector2( 302, 6 )
texture = ExtResource( 6 )

[node name="heart3" type="Sprite" parent="."]
position = Vector2( 292, 6 )
texture = ExtResource( 6 )

[node name="heart4" type="Sprite" parent="."]
position = Vector2( 282, 6 )
texture = ExtResource( 6 )

[node name="heart5" type="Sprite" parent="."]
position = Vector2( 272, 6 )
texture = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MultiplayerPause" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
margin_right = 320.0
margin_bottom = 180.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MultiplayerPause"]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 0.709804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MultiplayerPause"]
margin_left = 160.0
margin_top = 13.0
margin_right = 320.0
margin_bottom = 193.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MultiplayerPause"]
margin_left = 30.0
margin_right = 106.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MultiplayerPause/MarginContainer"]
margin_right = 76.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 180 )
custom_constants/separation = 14
alignment = 1

[node name="Resume" type="TextureButton" parent="CanvasLayer/MultiplayerPause/MarginContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 76.0
margin_bottom = 71.0
texture_normal = ExtResource( 8 )

[node name="Restart" type="TextureButton" parent="CanvasLayer/MultiplayerPause/MarginContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 76.0
margin_bottom = 95.0
texture_normal = ExtResource( 10 )

[node name="Exit" type="TextureButton" parent="CanvasLayer/MultiplayerPause/MarginContainer/VBoxContainer"]
margin_top = 109.0
margin_right = 76.0
margin_bottom = 119.0
texture_normal = ExtResource( 9 )

[connection signal="pressed" from="CanvasLayer/MultiplayerPause/MarginContainer/VBoxContainer/Resume" to="CanvasLayer/MultiplayerPause" method="_on_Resume_pressed"]
[connection signal="pressed" from="CanvasLayer/MultiplayerPause/MarginContainer/VBoxContainer/Restart" to="CanvasLayer/MultiplayerPause" method="_on_Restart_pressed"]
[connection signal="pressed" from="CanvasLayer/MultiplayerPause/MarginContainer/VBoxContainer/Exit" to="CanvasLayer/MultiplayerPause" method="_on_Exit_pressed"]
